# 2dRadiation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.txt  benchmark Directed.txt  benchmark Uniform.txt  eigen.cpp  main.cpp  paper.cpp  paperBadPerformance  test.cpp  weights test.txt
exe/: benchmark.cpp  dataTypesTest.cpp  geodesicEquationSolverTest.cpp  gridTest.cpp  main.cpp  mainOld.cpp  metricTest.cpp  stencilTest.cpp  test.cpp
src/: AdvancedUtiltiy.cpp  AdvancedUtiltiy.h  Config.hh  ControlFlow.hh  ControlFlowClasses.hh  DataTypes.hh  Distribution.hh  FourierHarmonics.cpp  FourierHarmonics.h  GeodesicEquationSolver.cpp  GeodesicEquationSolver.h  Grid.cpp  Grid.h  Grid2D.cpp  Grid2D.h  Grid2D.hh  Helper.hh  Includes.hh  Interpolation.cpp  Interpolation.h  Interpolation.hh  Log.hh  Logger.hh  Matrix.hh  Metric.cpp  Metric.h  Metric2D.cpp  Metric2D.h  Profiler.hh  Radiation.cpp  Radiation.h  RadiationFlat.cpp  RadiationFlat.h  RadiationFlatUniform.cpp  RadiationFlatUniform.h  RadiationNew.cpp  RadiationNew.h  RadiationUniform.cpp  RadiationUniform.h  SimulationData.cpp  (+15 more)
tests/: Makefile  testMetric2D.cpp  testStencil.cpp
